kubernetes/inventory-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  namespace: inventory-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      hostAliases:
        - ip: "172.16.16.200"
          hostnames:
          - "harbor.internskomda.cloud"
      imagePullSecrets:
      - name: harborregcred
      containers:
        - name: inventory-app
          image: harbor.internskomda.cloud/inventory-app/inventory-app:v6
          ports:
            - containerPort: 80
          command:
            - bash
            - "-c"
            - |
              set -ex
              php artisan migrate
              apache2-foreground
