kubernetes/inventory-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app
  namespace: inventory-app
spec:
  selector:
    app: inventory
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
