kubernetes/inventory-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: inventory-app
spec:
  ingressClassName: nginx
  rules:
  - host: internskomda.cloud
    http:
      paths:
      - backend:
          service:
            name: inventory-app
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - internskomda.cloud
    secretName: inventory-tls
